# Seelans-Tyres

./: .dockerignore  .gitignore  CMakeLists.txt  COPYING  README.md  RequiredEnvironmentVariables.txt  SeelansTyres.sln  azure-pipelines.yml  build.cmd  docker-compose-all.yml  docker-compose-loggingsinks.yml  seelanstyres.sql
.pipelines/: seelanstyres-frontends-healthchecksuisolution.yml  seelanstyres-frontends-mvcsolution.yml  seelanstyres-functionapps-systemdegradedtogglersolution.yml  seelanstyres-gateways-mvcbff.yml  seelanstyres-gateways-webbff.yml  seelanstyres-services-addressservicesolution.yml  seelanstyres-services-identityservicesolution.yml  seelanstyres-services-orderservicesolution.yml  seelanstyres-services-tyresservicesolution.yml
.pipelines/templates/: build-and-scan-solution.yml  create-efcore-bundle.yml  deploy-system-degraded-toggler.yml  deploy-webapp.yml  download-artifacts-and-deploy-infrastructure.yml  execute-efcore-bundle.yml  final-copy-and-publish-of-artifacts.yml  prebuild-iac.yml  publish-project.yml  publishProject.yml
Frontend/SeelansTyres.Mvc/: .gitignore  Program.cs  SeelansTyres.Mvc.csproj  appsettings.json
Frontends/SeelansTyres.Frontends.HealthChecksUI/: Dockerfile  SeelansTyres.Frontends.HealthChecksUI.csproj  appsettings.json
Frontends/SeelansTyres.Frontends.Mvc/: .gitignore  Dockerfile  Program.cs  SeelansTyres.Frontends.Mvc.csproj  appsettings.json  libman.json
Gateways/SeelansTyres.Gateways.MvcBff/: Dockerfile  Program.cs  SeelansTyres.Gateways.MvcBff.csproj  appsettings.json
Libraries/SeelansTyres.Libraries.Shared/: Database.cs  HealthChecks.cs  Logging.cs  SeelansTyres.Libraries.Shared.csproj  Swagger.cs
SeelansTyres.Data/: .gitignore  SeelansTyres.Data.csproj
SeelansTyres.Data/Entities/: Address.cs  Brand.cs  CartItem.cs  Customer.cs  Order.cs  OrderItem.cs  Tyre.cs
SeelansTyres.Data/Models/: AddressModel.cs  BrandModel.cs  CartItemModel.cs  CreateAddressModel.cs  CreateCartItemModel.cs  CreateOrderModel.cs  CreateTyreModel.cs  CustomerModel.cs  LoginModel.cs  OrderItemModel.cs  OrderModel.cs  TyreModel.cs
SeelansTyres.Models/Entities/: Address.cs  Order.cs  OrderItem.cs  Tyre.cs
SeelansTyres.Models/Models/: BrandModel.cs  CreateAddressModel.cs  CreateOrderItemModel.cs
SeelansTyres.Mvc/: .gitignore  Program.cs  SeelansTyres.Mvc.csproj
SeelansTyres.Mvc/Components/: ShoppingCartSummary.cs
SeelansTyres.Mvc/Controllers/: AccountController.cs  AdminController.cs  HomeController.cs  ShoppingController.cs
SeelansTyres.Mvc/Models/: AddNewTyreModel.cs  LoginModel.cs  MvcTyreModel.cs  RegisterModel.cs  UpdateAccountModel.cs
SeelansTyres.Mvc/Properties/: launchSettings.json
SeelansTyres.Mvc/Services/: AddressService.cs  AuthenticationService.cs  CachedCartService.cs  CartService.cs  EmailService.cs  IAddressService.cs  IAuthenticationService.cs  ICartService.cs  IEmailService.cs  IOrderService.cs  ITyresService.cs  OrderService.cs  TyresService.cs
SeelansTyres.Mvc/Templates/: Receipt.cshtml  VerificationToken.cshtml
SeelansTyres.Mvc/ViewModels/: AccountViewModel.cs  CartViewModel.cs
SeelansTyres.Mvc/Views/: _ViewImports.cshtml  _ViewStart.cshtml
SeelansTyres.WebApi/: .gitignore  Program.cs  SeelansTyres.WebApi.csproj  appsettings.json
SeelansTyres.WebApi/Controllers/: AddressesController.cs  AuthenticationController.cs  BrandsController.cs  CartController.cs  OrdersController.cs  TyresController.cs
SeelansTyres.WebApi/Data/: SeelansTyresContext.cs
SeelansTyres.WebApi/Profiles/: AddressProfile.cs  CartItemProfile.cs  CustomerProfile.cs  OrderItemProfile.cs  OrderProfile.cs  TyreProfile.cs
SeelansTyres.WebApi/Properties/: launchSettings.json
SeelansTyres.WebApi/Services/: AddressRepository.cs  AdminAccountSeeder.cs  CartRepository.cs  IAddressRepository.cs  ICartRepository.cs  IOrderRepository.cs  ISeelansTyresRepository.cs  ITyresRepository.cs  OrderRepository.cs  SeelansTyresRepository.cs  TyresRepository.cs
Services/SeelansTyres.Services.AddressService/: Dockerfile  Program.cs  SeelansTyres.Services.AddressService.csproj  appsettings.json
Services/SeelansTyres.Services.IdentityService/: Config.cs  Dockerfile  Program.cs  SeelansTyres.Services.IdentityService.csproj  appsettings.json  libman.json  tempkey.jwk
Services/SeelansTyres.Services.OrderService/: Dockerfile  Program.cs  SeelansTyres.Services.OrderService.csproj  appsettings.json
Services/SeelansTyres.Services.TyresService/: .gitignore  Dockerfile  Program.cs  SeelansTyres.Services.TyresService.csproj  appsettings.json
Services/SeelansTyres.WebApi/: Program.cs  SeelansTyres.WebApi.csproj  appsettings.json
cmake/: .env.in  SeelansTyres.Data.AssemblyInfo.cs.in  SeelansTyres.Frontends.HealthChecksUI.AssemblyInfo.cs.in  SeelansTyres.Frontends.Mvc.AssemblyInfo.cs.in  SeelansTyres.Gateways.MvcBff.AssemblyInfo.cs.in  SeelansTyres.Libraries.Shared.AssemblyInfo.cs.in  SeelansTyres.Mvc.AssemblyInfo.cs.in  SeelansTyres.Services.AddressService.AssemblyInfo.cs.in  SeelansTyres.Services.IdentityService.AssemblyInfo.cs.in  SeelansTyres.Services.OrderService.AssemblyInfo.cs.in  SeelansTyres.Services.TyresService.AssemblyInfo.cs.in  SeelansTyres.WebApi.AssemblyInfo.cs.in  copy-publish-files.cmd.in  publish-project.in  run-all.cmd.in  run.cmd.in
docs/az-400/: README.md
scripts/: build-with-docker.cmd  build-with-loggingsinks.cmd  build-with-services.cmd  build.cmd  docker-compose-down-loggingsinks.cmd  docker-compose-down-services.cmd  docker-compose-up-loggingsinks.cmd  docker-compose-up-services.cmd  migrate-databases.cmd  prebuild.cmd  pull-required-docker-images.cmd  run-cmake.cmd  runall.cmd
self-signed-certificates/: health-local.seelanstyres.com.crt  health-local.seelanstyres.com.key  id-local.seelanstyres.com.crt  id-local.seelanstyres.com.key  kibana-local.seelanstyres.com.crt  kibana-local.seelanstyres.com.key  rabbitmq-local.seelanstyres.com.crt  rabbitmq-local.seelanstyres.com.key  www-local.seelanstyres.com.crt  www-local.seelanstyres.com.key
src/: .dockerignore  .gitignore  SeelansTyres.sln  SeelansTyres.slnLaunch
(+739 files in other folders)
